--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,5 +16,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.533"
-        tools:srcCompat="@drawable/member_btn" />
+        android:src="@drawable/member_btn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
