--- a/app/src/main/res/layout/member_reg.xml
+++ b/app/src/main/res/layout/member_reg.xml
@@ -78,7 +78,7 @@
                 android:padding="10dp"
                 android:textColor="@color/input_register"
                 android:textColorHint="@color/input_register_hint" />
-            <RadioGroup android:id="@+id/radioGroup"
+            <RadioGroup android:id="@+id/age"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -118,7 +118,7 @@
 
             </RadioGroup>
             <EditText
-                android:id="@+id/et_pass"
+                android:id="@+id/info"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
