--- a/app/src/main/res/layout/member_reg.xml
+++ b/app/src/main/res/layout/member_reg.xml
@@ -25,7 +25,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:src="@drawable/male" />
+                android:src="@drawable/fm" />
 
             <ImageView
                 android:id="@+id/fg"
@@ -34,7 +34,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:src="@drawable/female" />
+                android:src="@drawable/fg" />
         </LinearLayout>
 
         <LinearLayout
@@ -52,7 +52,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:src="@drawable/male" />
+                android:src="@drawable/mm" />
 
             <ImageView
                 android:id="@+id/mg"
@@ -61,7 +61,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:src="@drawable/female" />
+                android:src="@drawable/mg" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
