--- a/app/src/main/res/layout/mem_detail.xml
+++ b/app/src/main/res/layout/mem_detail.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="@drawable/side_nav_bar1"
+    android:background="@drawable/side_nav_bar2"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/nav_header_height"
-        android:background="@drawable/side_nav_bar"
+        android:layout_height="wrap_content"
+        android:background="@drawable/side_nav_bar2"
         android:gravity="top"
         android:orientation="horizontal"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -36,7 +37,7 @@
             android:orientation="vertical">
             <TextView
                 android:id="@+id/myNm"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
                 android:text="nick name  "
@@ -44,7 +45,14 @@
 
                 android:textColor="#4C0560"
                 android:textSize="25sp"  />
+            <TextView
+                android:id="@+id/myAge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="twenties  "
 
+                android:textColor="#4C0560"
+                android:textSize="25sp"  />
             <TextView
                 android:id="@+id/myAmt"
                 android:layout_width="wrap_content"
@@ -52,47 +60,38 @@
                 android:textColor="#4C0560"
                 android:textSize="20sp"
                 android:text="item 구매 총금액 " />
-
+            <TextView
+                android:id="@+id/myInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#4C0560"
+                android:textSize="20sp"
+                android:text="hansume guy!" />
+            <TextView
+                android:id="@+id/myRegdt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#4C0560"
+                android:textSize="20sp"
+                android:text="2020-08-20" />
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageButton
+        android:id="@+id/msgBtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/msg"/>
 
-        <ImageView
-            android:id="@+id/female"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:src="@drawable/female" />
-
-        <ImageView
-            android:id="@+id/male"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:src="@drawable/male" />
-    </LinearLayout>
-
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/itemList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:src="@drawable/item" />
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp" />
 
-    </LinearLayout>
+
+
 </LinearLayout>
