--- a/app/src/main/res/layout/member_reg.xml
+++ b/app/src/main/res/layout/member_reg.xml
@@ -68,6 +68,18 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <EditText
+                android:id="@+id/eml"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@color/input_register_bg"
+                android:hint="@string/hint_email"
+                android:inputType="textEmailAddress"
+                android:padding="10dp"
+                android:textColor="@color/input_register"
+                android:textColorHint="@color/input_register_hint" />
+
+            <EditText
                 android:id="@+id/nickNm"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
