--- a/app/src/main/res/layout/msg_main.xml
+++ b/app/src/main/res/layout/msg_main.xml
@@ -13,8 +13,7 @@
         android:layout_height="355dp"
         android:layout_marginTop="88dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
+        android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +22,7 @@
         android:id="@+id/btnSnd"
         android:layout_width="239dp"
         android:layout_height="91dp"
-        android:background="#2E2B2B"
+        android:background="#FF9800"
         android:text="Send"
         android:textSize="28dp"
         android:textColor="@color/cardview_light_background"
