--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -130,6 +130,17 @@
                     android:tooltipText="$100"
                     android:src="@drawable/p05" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"  >
+                <ImageView
+                    android:id="@+id/s01"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:scaleType="fitXY"
+                    android:tooltipText="$50"
+                    android:src="@drawable/s1" />
                 <ImageView
                     android:id="@+id/prod06"
                     android:layout_width="match_parent"
@@ -142,6 +153,18 @@
                     android:scaleType="fitCenter"
                     android:tooltipText="$1"
                     android:src="@drawable/p06" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"  >
+                <ImageView
+                    android:id="@+id/s02"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:scaleType="fitXY"
+                    android:tooltipText="$50"
+                    android:src="@drawable/s1" />
                 <ImageView
                     android:id="@+id/prod07"
                     android:layout_width="match_parent"
@@ -166,6 +189,18 @@
                     android:scaleType="fitCenter"
                     android:tooltipText="$1"
                     android:src="@drawable/p08" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"  >
+                <ImageView
+                    android:id="@+id/s03"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:scaleType="fitXY"
+                    android:tooltipText="$50"
+                    android:src="@drawable/s1" />
                 <ImageView
                     android:id="@+id/prod09"
                     android:layout_width="match_parent"
@@ -178,7 +213,7 @@
                     android:scaleType="fitCenter"
                     android:tooltipText="$1"
                     android:src="@drawable/p09" />
-
+            </LinearLayout>
 
         </LinearLayout>
 
