--- a/app/src/main/res/layout/mem_old.xml
+++ b/app/src/main/res/layout/mem_old.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/nav_header_height"
+        android:layout_height="wrap_content"
         android:background="@drawable/side_nav_bar"
         android:gravity="top"
         android:orientation="horizontal"
@@ -86,13 +86,38 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="300dp"
+        android:orientation="horizontal">
         <ImageView
             android:id="@+id/item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
+            android:layout_weight="1"
+            android:layout_gravity="center"
             android:src="@drawable/item" />
+        <ImageView
+            android:id="@+id/msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:src="@drawable/msg" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <EditText
+            android:id="@+id/numOfMemb"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/bg_register"
+
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:inputType="textPersonName"
+            android:text="members:100" />
     </LinearLayout>
 </LinearLayout>
