--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -19,5 +19,9 @@
         android:id="@+id/navigation_map"
         android:icon="@android:drawable/ic_menu_mapmode"
         android:title="@string/map" />
+    <item
+        android:id="@+id/info"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="갤러리" />
 
 </menu>
