--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,14 +1,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
         android:centerColor="#C9FF07"
-        android:endColor="#FF9800"
+        android:endColor="#4CAF50"
         android:startColor="#FFFFFF"
-        android:type="linear" />
-
-    <gradient android:type="radial"
-        android:gradientRadius="450dp"
-        android:startColor="#E9E9E9"
-        android:endColor="#FFC107" />
+        android:angle="0"
+        android:centerY="0.7" />
+    <corners
+        android:radius="2dp" />
 </shape>
