--- a/app/src/main/res/drawable/side_nav_bar1.xml
+++ b/app/src/main/res/drawable/side_nav_bar1.xml
@@ -1,14 +1,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="235"
         android:centerColor="#BAC4F492"
         android:endColor="#FF9800"
         android:startColor="#FFFFFF"
-        android:type="linear" />
-
-    <gradient android:type="radial"
-        android:gradientRadius="350dp"
-        android:startColor="#E9E9E9"
-        android:endColor="#1C26EC" />
+        android:type="linear"
+        android:centerY="0.7" />
+    <corners
+        android:radius="2dp" />
 </shape>
