--- a/app/src/main/res/layout/mem_detail.xml
+++ b/app/src/main/res/layout/mem_detail.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="@drawable/side_nav_bar2"
+    android:background="@drawable/side_nav_bar1"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/side_nav_bar2"
+        android:background="@drawable/side_nav_bar"
         android:gravity="top"
         android:orientation="horizontal"
         android:paddingLeft="@dimen/activity_horizontal_margin"
