--- a/app/src/main/res/layout/mem_old.xml
+++ b/app/src/main/res/layout/mem_old.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
 
     android:background="@drawable/side_nav_bar1"
     android:orientation="vertical">
@@ -64,58 +65,73 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin" >
+        android:layout_height="479dp">
 
         <ImageView
             android:id="@+id/female"
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_width="143dp"
+            android:layout_height="141dp"
             android:layout_gravity="center_horizontal"
+
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="52dp"
             android:layout_weight="1"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:scaleType="fitXY"
-            android:src="@drawable/females" />
+            android:src="@drawable/females"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/male"
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_width="143dp"
+            android:layout_height="141dp"
             android:layout_gravity="center_horizontal"
-            android:scaleType="fitXY"
+            android:layout_marginStart="96dp"
+            android:layout_marginTop="100dp"
             android:layout_weight="1"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:src="@drawable/males" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+            android:scaleType="fitXY"
+            android:src="@drawable/males"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/female"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="127dp"
+            android:layout_height="137dp"
 
             android:layout_gravity="center_horizontal"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="48dp"
             android:layout_weight="1"
             android:scaleType="fitXY"
-            android:src="@drawable/item" />
+            android:src="@drawable/item"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/female"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/msg"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="127dp"
+            android:layout_height="137dp"
 
             android:layout_gravity="center_horizontal"
+            android:layout_marginStart="20dp"
             android:layout_weight="1"
             android:scaleType="fitXY"
-            android:src="@drawable/msg" />
-    </LinearLayout>
+            android:src="@drawable/msg"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.369"
+            app:layout_constraintStart_toEndOf="@+id/item"
+            app:layout_constraintTop_toBottomOf="@+id/male"
+            app:layout_constraintVertical_bias="0.518" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
